# statsWR_mcp_server

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  statsWR_mcp_server.py
data/: sample_champions.json
mcp_src/: statsWR_mcp_server.py
mcp_src/api_requests/champion/: gameplay_data.py
mcp_src/mcp_configs/: __init__.py  api_config.py
requests/champion/: __init__.py  abilities.py  comments.py  gameplay_data.py
src/: statsWR_mcp_server.py
src/mcp_configs/: __init__.py  api_config.py
src/prompt_library/: __init__.py
src/requests/champion/: abilities.py  comments.py  gameplay_data.py
src/web_scraping/: __init__.py  matchups.py
